[gd_scene load_steps=3 format=3 uid="uid://cjsxha0igh28w"]

[ext_resource type="Script" path="res://Scripts/control.gd" id="1_nv6ia"]
[ext_resource type="Script" path="res://Scenes/panel.gd" id="2_sf5tu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nv6ia")

[node name="OpenPlayStoreButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 477.0
offset_top = 240.0
offset_right = 671.0
offset_bottom = 357.0
grow_horizontal = 2
grow_vertical = 2
text = "Open Playstore
"

[node name="WelcomeText" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 278.0
offset_top = 73.0
offset_right = 915.0
offset_bottom = 167.0
text = "WELCOME TO THE PLAYSTORE!!!!!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitPlayStoreButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 34.0
offset_top = 26.0
offset_right = 83.0
offset_bottom = 49.0
text = "Exit playstore"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 130.0
offset_top = 196.0
offset_right = 170.0
offset_bottom = 236.0

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_sf5tu")

[node name="Game_icon" type="Sprite2D" parent="Panel"]

[node name="Download" type="Button" parent="Panel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Title" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Desc" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Publisher" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Version" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[connection signal="button_down" from="OpenPlayStoreButton" to="." method="_on_open_play_store_button_button_down"]
[connection signal="button_down" from="ExitPlayStoreButton" to="." method="_on_exit_play_store_button_button_down"]
